--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 18-19: Course materials . * Complément de formation Statistique. + Fall 18-19: - Discrete Random Variables: . - Continuous Random Variables: . - Exercices: . + * Probabilities &amp; Statistics. + Prepared by me...">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 18-19: Course materials . * Complément de formation Statistique. + Fall 18-19: - Discrete Random Variables: . - Continuous Random Variables: . - Exercices: . * Probabilities &amp; Statistics. + Spring 16-17: - Discrete...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 18-19: Course materials . * Complément de formation Statistique. + Fall 18-19: - Discrete Random Variables: . - Continuous Random Variables: . - Exercices: . + * Probabilities &amp; Statistics. + Prepared by me...">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 18-19: Course materials . * Complément de formation Statistique. + Fall 18-19: - Discrete Random Variables: . - Continuous Random Variables: . - Exercices: . * Probabilities &amp; Statistics. + Spring 16-17: - Discrete...">
   
 
   
@@ -241,23 +241,18 @@
 <ul>
   <li>Complément de formation Statistique.
     <ul>
-      <li><i class="fa fa-hand-peace-o" aria-hidden="true"></i> Fall 18-19:
+      <li>Fall 18-19:
         <ul>
           <li>Discrete Random Variables: <a target="_blank" href="../documents/Slides_VAdiscrètes_CompStat_A3_ESILV.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
           <li>Continuous Random Variables: <a target="_blank" href="../documents/Slides_VAcontinues_CompStat_A3_ESILV.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
           <li>Exercices: <a target="_blank" href="../documents/TD_CompStat_A3_ESILV.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
         </ul>
       </li>
-      <li>
-        <ul class="list-inline">
-
-</ul>
-      </li>
     </ul>
   </li>
   <li>Probabilities &amp; Statistics.
     <ul>
-      <li><i class="fa fa-hand-peace-o" aria-hidden="true"></i> Prepared by me for Spring 16-17:
+      <li><i class="fa fa-hand-peace-o" aria-hidden="true"></i> Spring 16-17:
         <ul>
           <li>Discrete Random Variables: <a target="_blank" href="../documents/proba-spring-16-17-1.pdf">1 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, <a target="_blank" href="../documents/proba-spring-16-17-2.pdf">2 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
           <li>Continuous Random Variables: <a target="_blank" href="../documents/proba-spring-16-17-3.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
